@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-04-06T01:20:11Z",
-  "count_outdated" : 1154,
-  "uniques_outdated" : 300,
+  "timestamp" : "2022-04-06T08:21:13Z",
+  "count_outdated" : 1156,
+  "uniques_outdated" : 301,
   "count" : 1742,
   "uniques" : 321,
   "clones" : [
-    {
-      "timestamp": "2022-03-23T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 0, 1 ]
-    },
     {
       "timestamp": "2022-03-24T00:00:00Z",
       "count": 2,
