@@ -1,12 +1,7 @@
 {
-  "count": 588,
+  "count": 586,
   "uniques": 15,
   "clones": [
-    {
-      "timestamp": "2022-03-23T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-03-24T00:00:00Z",
       "count": 2,
