@@ -1,3 +1,9 @@
+2022-04-06T08:21:13Z:
+* notice: last 14d: all unq: 586 15
+* notice: prev accum: outdated-all outdated-unq / all unq: 1154 300 / 1742 321
+* notice: next accum: outdated-all outdated-unq / all unq: 1156 301 / 1742 321
+* notice: prev json diff // prev day diff: unq all: +0 +0 / -0 -0 // +0 +0 / -0 -0
+
 2022-04-06T01:20:11Z:
 * notice: last 14d: all unq: 588 15
 * notice: prev accum: outdated-all outdated-unq / all unq: 1133 292 / 1723 314
